src/test/deca/context/invalid/avecObjet/return_main.deca
// Description :
//    instruction return dans le main
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Type incompatible : attendu void, trouvé int

{
    return 0;
}